--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="https://kit.fontawesome.com/d2785ef616.js" crossorigin="anonymous"></script>
     <title>kabanker opdracht</title>
 </head>
 <body>
     <p>pls</p>
+    <i class="fab fa-accessible-icon"></i>
 </body>
 </html>
