--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="topbar">
-        <p>Krijg de kabanker</p>
+        <p id="stik">Krijg de kabanker</p>
         <i class="fab fa-accessible-icon"></i>
     </div>
     <p>pls</p>
