--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="topbar">
         <p id="stik">Krijg de kabanker</p>
         <i class="fab fa-accessible-icon"></i>
+        <a href="jsdemo.html">go to JAVA Page</a>
     </div>
     <p>pls</p>
 
