--- a/jsdemo.html
+++ b/jsdemo.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>java opdracht</title>
+    <script src="js/jsDemo.js"></script>
 </head>
 <body>
     <div class="topbar">
         <p id="stik">Krijg de hiv</p>
     </div>
     <p>pls</p>
-
+    <img id="dick" src="images/rick1.png" alt="rickroll">  
+    <button onclick="wow()">wow</button>
 </body>
 <script>
     document.getElementById("stik").innerHTML = "stik erin"
