--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="styles/index.css">
     <script src="https://kit.fontawesome.com/d2785ef616.js" crossorigin="anonymous"></script>
     <title>PortfolioSite</title>
-    <script src="js/javaIndex.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,12 +16,41 @@
 
 </head>
 <body>
-    <section>
-        <div class="navbar">
+    <script src="js/javaIndex.js"></script>
+    <section class="TopContainer">
+        <div class="">
             <div class="title">
                 <h1> <span id="green">Luuk</span> de Vos</h1>
             </div>
+
+            <nav class="navbar">
+                <div class="hamburger-menu">
+                    <div class="line line-1"></div>
+                    <div class="line line-2"></div>
+                    <div class="line line-3"></div>
+                </div>
+                <div class="navv">
+                  <ul class="navbar-navs">
+                    <li class="nav-items">
+                      <a class="nav-links" href="#">Home</a>
+                    </li>
+                    <li class="nav-items">
+                      <a class="nav-links" href="#">Features</a>
+                    </li>
+                    <li class="nav-items">
+                      <a class="nav-links" href="#">Pricing</a>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+
         </div>
+    </section>
+    <section class="AboutmeContainer">
+        <div class="aboutmetitle">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, doloribus officiis, soluta accusantium id animi voluptatibus aperiam dolorum illum, harum voluptates libero placeat tempore recusandae? Fugiat quod aliquid saepe facere!</p>
+        </div>
+
     </section>
 
 
@@ -47,5 +75,6 @@
     <div class="item" data-aos="flip-down">9</div>
     <div class="item" data-aos="flip-right">10</div>
     <div class="item" data-aos="flip-left">11</div>
+    <script src="javaIndex.js"></script>
 </body>
 </html>
