--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="imagecontainer">
                   <img src="images/profilepicture.jpg">
                 </div>
-                <h1>My name is luuk de vos</h1>
+                <h1>My name Is Luuk de Vos</h1>
    
               </div>
               <div class='icon-scroll'></div>
