--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
                 <div class="imagecontainer">
                   <img src="images/profilepicture.jpg">
                 </div>
-                <h1>My name Is Luuk de Vos</h1>
-   
+                <div class="titletext">
+                <h1 class="titlee">I am <span class="text1">a developer</span><span class="text2">Luuk de Vos</span></h1>
+              </div>
               </div>
               <div class='icon-scroll'></div>
     </section>
