--- a/projectarcade.html
+++ b/projectarcade.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProjectArcade</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="styles/projectarcade.css">
+    <script src="https://kit.fontawesome.com/d2785ef616.js" crossorigin="anonymous"></script>\
+    <script src="js/portfoliopage.js"></script>
 </head>
 <body>
-    
+    <section class="topcontainer">
+        <h1 class="title">Project Arcade</h1>
+        <img src="images/ProjectArcade/logo.png">
+        <h3 class="toptext"></h3>
+        <a href="" class="back btn">previous</a>
+        <a href="" class="next btn">next</a>
+        <div class="line"></div>
+        <div class="half-circle" onclick="openpage()"><p id="scroll">Scrolldown</p></div>
+
+        
+    </section>
+    <section class="contentcontainer" id="content">
+
+        <div class="window">
+            <div class="textwindow">
+                <p></p>
+            </div>
+            <div class="imagewindow">
+                <img src="images/ProjectArcade/Player2.gif" alt="">
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
