--- a/projectarcade.html
+++ b/projectarcade.html
@@ -23,7 +23,7 @@
         <img src="images/ProjectArcade/logo.png">
         <h3 class="toptext"></h3>
         <a href="" class="back btn">previous</a>
-        <a href="" class="next btn">next</a>
+        <a href="projectdata.html" class="next btn">next</a>
         <div class="line"></div>
         <div class="half-circle" onclick="openpage()">
             <p id="scroll">Scrolldown</p>
