--- a/jsdemo.html
+++ b/jsdemo.html
@@ -14,7 +14,7 @@
     <p>pls</p>
     <img id="dick" src="images/rick1.png" alt="rickroll">  
     <button onclick="wow()">wow</button>
-    <h2 id="hi">Hi liza</h2>
+    <h2 id="hi">Hiiiiiii</h2>
 </body>
 <script>
     document.getElementById("stik").innerHTML = "stik erin"
