--- a/projectdata.html
+++ b/projectdata.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
-
+    <link rel="shortcut icon" type="image/x-icon" href="images/ProjectData/logo.png">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="styles/projectdata.css">
     <script src="https://kit.fontawesome.com/d2785ef616.js" crossorigin="anonymous"></script>\
@@ -19,11 +19,12 @@
 
 <body>
     <section class="topcontainer">
+        <a href="index.html" class="home">back</a>
         <h1 class="title">Project Data</h1>
         <img src="images/ProjectData/logo.png">
         <h3 class="toptext"></h3>
         <a href="projectarcade.html" class="back btn">previous</a>
-        <a href="" class="next btn">next</a>
+        <a href="platformer.html" class="next btn">next</a>
         <div class="line"></div>
         <div class="half-circle" onclick="openpage()">
             <p id="scroll">Scrolldown</p>
