--- a/index.html
+++ b/index.html
@@ -15,21 +15,25 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="styles/style.css">
   <script src="https://kit.fontawesome.com/d2785ef616.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" type="image/x-icon" href="images/profilepicture.jpg">
 </head>
 
 <body>
-
+  <script>
+    AOS.init();
+  </script>
   <section class="TopContainer">
     <nav class="navbar">
-      <div class="title">
-        <h1>Luuk de Vos</h1>
+      <div class="title" >
+        <h1 data-aos="fade-down" data-aos-duration="2000">Luuk de Vos</h1>
       </div>
       <div class="hamburger-menu">
         <div class="line line-1"></div>
         <div class="line line-2"></div>
         <div class="line line-3"></div>
       </div>
-      <ul class="mainMenu">
+      <ul class="mainMenu"  data-aos="fade-up" data-aos-duration="2000">
+        
         <li>
           <a class="nav-links" id="nav-link" href="#home">Aboutme</a>
         </li>
@@ -42,22 +46,27 @@
       </ul>
     </nav>
     <div class="centercontainer">
-      <div class="imagecontainer">
+      <div class="imagecontainer" data-aos="zoom-in-down" data-aos-duration="1200">
         <img src="images/profilepicture.jpg">
       </div>
-      <div class="titletext">
-        <h1 class="titlee">I am <span class="text1">a developer</span><span class="text2">Luuk de Vos</span></h1>
+      <div class="titletext" data-aos="zoom-in-up" data-aos-duration="1200">
+        <h1 class="titlee">I am <span class="text1">Luuk de Vos</span><span class="text2">a developer</span></h1>
       </div>
     </div>
     <div class='icon-scroll'></div>
   </section>
   <section class="AboutmeContainer">
     <div class="aboutmetitle">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, doloribus officiis, soluta accusantium id
-        animi voluptatibus aperiam dolorum illum, harum voluptates libero placeat tempore recusandae? Fugiat quod
-        aliquid saepe facere!</p>
+        <h1>About me</h1>
+    </div>
+    <div class="leftside">
+      <img src="/images/imageofme.jpeg" alt="self-portret">
     </div>
 
+    <div class="rightside">
+      <h1>English</h1>
+      <p>sekufhseiufiusehfui</p>
+    </div>
   </section>
 
 
@@ -65,9 +74,7 @@
 
 
 
-  <script>
-    AOS.init();
-  </script>
+
   <div class="item" data-aos="fade-up">1</div>
   <div class="item" data-aos="fade-down">2</div>
   <div class="item" data-aos="fade-right">3</div>
