--- a/projectarcade.html
+++ b/projectarcade.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
-
+    <link rel="shortcut icon" type="image/x-icon" href="images/ProjectArcade/logo.png">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="styles/projectarcade.css">
     <script src="https://kit.fontawesome.com/d2785ef616.js" crossorigin="anonymous"></script>\
@@ -19,6 +19,7 @@
 
 <body>
     <section class="topcontainer">
+        <a href="index.html" class="home">back</a>
         <h1 class="title">Project Arcade</h1>
         <img src="images/ProjectArcade/logo.png">
         <h3 class="toptext"></h3>
