--- a/index.html
+++ b/index.html
@@ -98,21 +98,67 @@
   <section class="porfolioGalery" id="portfoliogalery">
     <h1 class="portfoliotitle">Portfolio Galery</h1>
     <div class="portfolioinformation">
-      <p class="leftside">Here you can see some work i made the last year</p>
-      <p class="rightside">hier kan je mijn werk van het afgelopen jaar bekijken</p>
-    </div>
-    <div class="portfoliocontent">
-      <div class="cards">
-        <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <p class="">Here you can see some work i made the last year</p>
+          </div>
+          <div class="col">
+            <p class="">hier kan je mijn werk van het afgelopen jaar bekijken</p>
           </div>
         </div>
       </div>
+
+    </div>
+    <div class="portfoliocontent">
+      <div class="cards">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="card" >
+                <h5 class="card-title">PlatformerGame</h5>
+                <img src="images/Platformer/logo.jpg" class="card-img-top" alt="...">
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">More information</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" >
+                <h5 class="card-title">Card title</h5>
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <h5 class="card-title">Card title</h5>
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                  <h5 class="card-title">Card title</h5>
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-footer">
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </div>
+
+
+
+
+
+      </div>
+    </div>
     </div>
   </section>
 
