--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6 left">
-          <img class="" src="/images/imageofme.jpeg" alt="self-portret">
+          <img class="" src="images/imageofme.jpeg" alt="self-portret">
         </div>
         <div class="col-sm-6 right">
           <h1>English</h1>
