--- a/index.html
+++ b/index.html
@@ -114,41 +114,39 @@
       <div class="cards">
         <div class="container">
           <div class="row">
+
             <div class="col">
               <div class="card" >
                 <h5 class="card-title">PlatformerGame</h5>
                 <img src="images/Platformer/logo.jpg" class="card-img-top" alt="...">
                 <div class="card-footer">
-                  <a href="#" class="btn btn-primary">More information</a>
+                  <a href="platformer.html" class="btn btn-primary">More information</a>
                 </div>
               </div>
             </div>
+
             <div class="col">
               <div class="card" >
-                <h5 class="card-title">Card title</h5>
-                <img src="..." class="card-img-top" alt="...">
+                <h5 class="card-title">ProjectArcade</h5>
+                <img src="images/ProjectArcade/logo.png" class="card-img-top" alt="...">
                 <div class="card-footer">
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="projectarcade.html" class="btn btn-primary">More information</a>
                 </div>
               </div>
             </div>
+
             <div class="col">
-              <div class="card">
-                <h5 class="card-title">Card title</h5>
-                <img src="..." class="card-img-top" alt="...">
+              <div class="card" >
+                <h5 class="card-title">ProjectData</h5>
+                <img src="images/ProjectData/logo.png" class="card-img-top" alt="...">
                 <div class="card-footer">
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="projectdata.html" class="btn btn-primary">More information</a>
                 </div>
               </div>
+            </div>
+            
 
-              <div class="col">
-                <div class="card" style="width: 18rem;">
-                  <h5 class="card-title">Card title</h5>
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
+
             </div>
           </div>
         </div>
