--- a/platformer.html
+++ b/platformer.html
@@ -20,7 +20,7 @@
 
 <body>
     <section class="topcontainer">
-        <a href="index.html" class="home">back</a>
+        <a href="index.html#portfoliogalery" class="home">back</a>
         <h1 class="title">Platformer</h1>
         <img src="images/Platformer/logo.jpg">
         <h3 class="toptext"></h3>
