--- a/projectdata.html
+++ b/projectdata.html
@@ -19,7 +19,7 @@
 
 <body>
     <section class="topcontainer">
-        <a href="index.html" class="home">back</a>
+        <a href="index.html#portfoliogalery" class="home">back</a>
         <h1 class="title">Project Data</h1>
         <img src="images/ProjectData/logo.png">
         <h3 class="toptext"></h3>
