--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       <ul class="mainMenu" data-aos="fade-up" data-aos-duration="2000">
 
         <li>
-          <a class="nav-links" id="nav-link" href="#aboutme">Aboutme</a>
+          <a class="nav-links01" id="nav-link" href="#aboutme">Aboutme</a>
         </li>
         <li>
-          <a class="nav-links" id="nav-link" href="#portfoliogalery">Portfolio Galery</a>
+          <a class="nav-links02" id="nav-link" href="#portfoliogalery">Portfolio Gallery</a>
         </li>
         <li>
-          <a class="nav-links" id="nav-link" href="#">Contact me</a>
+          <a class="nav-links03" id="nav-link" href="#">Contact me</a>
         </li>
       </ul>
     </nav>
@@ -70,7 +70,7 @@
             Development.</p>
           <p>My skills are C#, HTML, Art, Css, python & php</p>
           <p>In my free time i like to code and to mountainbike a little bit.</p>
-          <p> My ambition is to make a multiplayer steam game</p>
+          <p> My ambition is to make a multiplayer steam game like : </p>
           <br>
           <h1>Nederlands</h1>
           <p>Mijn Naam is Luuk de Vos en ik ben 17 jaar oud. Ik zit op het sintlucas en volg de opleiding
@@ -96,27 +96,13 @@
     </div>
   </section>
   <section class="porfolioGalery" id="portfoliogalery">
-    <h1 class="portfoliotitle">Portfolio Galery</h1>
-    <div class="portfolioinformation">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <p class="">Here you can see some work i made the last year</p>
-          </div>
-          <div class="col">
-            <p class="">hier kan je mijn werk van het afgelopen jaar bekijken</p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-    <div class="portfoliocontent">
+    <h1 class="portfoliotitle">Portfolio Gallery</h1>
+    <div class="portfoliocontent" ata-aos="fade-up">
       <div class="cards">
         <div class="container">
           <div class="row">
-
             <div class="col">
-              <div class="card" >
+              <div class="card">
                 <h5 class="card-title">PlatformerGame</h5>
                 <img src="images/Platformer/logo.jpg" class="card-img-top" alt="...">
                 <div class="card-footer">
@@ -126,7 +112,7 @@
             </div>
 
             <div class="col">
-              <div class="card" >
+              <div class="card" ata-aos="fade-up">
                 <h5 class="card-title">ProjectArcade</h5>
                 <img src="images/ProjectArcade/logo.png" class="card-img-top" alt="...">
                 <div class="card-footer">
@@ -136,7 +122,7 @@
             </div>
 
             <div class="col">
-              <div class="card" >
+              <div class="card item" ata-aos="fade-up">
                 <h5 class="card-title">ProjectData</h5>
                 <img src="images/ProjectData/logo.png" class="card-img-top" alt="...">
                 <div class="card-footer">
