--- a/platformer.html
+++ b/platformer.html
@@ -20,21 +20,15 @@
 
 <body>
     <section class="topcontainer">
+        <div class="toppp">
         <a href="index.html#portfoliogalery" class="home">back</a>
         <h1 class="title">Platformer</h1>
+    </div>
         <img src="images/Platformer/logo.jpg">
-        <h3 class="toptext"></h3>
+
         <a href="projectdata.html" class="back btn">previous</a>
         <a href="" class="next btn">next</a>
-        <div class="line"></div>
-        <div class="half-circle" onclick="openpage()">
-            <p id="scroll">Scrolldown</p>
-        </div>
-
-
-    </section>
-    <section class="contentcontainer" id="content">
-
+        
         <div class="window">
             <div class="textwindow">
                 <h1>Platformer</h1>
@@ -62,6 +56,11 @@
                 </iframe>
             </div>
         </div>
+
+    </section>
+    <section class="contentcontainer" id="content">
+
+        
     </section>
 </body>
 
