--- a/projectarcade.html
+++ b/projectarcade.html
@@ -38,8 +38,8 @@
             <div class="textwindow">
                 <h1>DiscoJam</h1>
                 <h2>English</h2>
-                <p>for this school assignment we a game that looks and feels good. And because we all five enjoy rhythm games we decided to choose this.
-                    We named our game Disco Jam, why the name Disco jam? Disco Jam is based on 80s disco, Jamming can be dancing but can also be meant as fighting.
+                <p>For this school assignment we made a game that looks and feels good. And because we all five enjoy rhythm games we decided to choose this.
+                    We named our game Disco Jam, why the name Disco jam? Disco Jam Is based on 80s disco, Jamming can be dancing but can also be meant as fighting.
                 </p>
                 <p>The game will be like Streetfighter and guitar hero.</p>
                 <p>There are arrows that move upwards, and you have to hit them in the circle to get points and when the arrow is perfect in the circle you get 2 points.
