--- a/platformer.html
+++ b/platformer.html
@@ -21,35 +21,42 @@
 <body>
     <section class="topcontainer">
         <div class="toppp">
-        <a href="index.html#portfoliogalery" class="home">back</a>
-        <h1 class="title">Platformer</h1>
-    </div>
-        <img src="images/Platformer/logo.jpg">
+            <a href="index.html#portfoliogalery" class="home">back</a>
+            <h1 class="title">Platformer</h1>
 
-        <a href="projectdata.html" class="back btn">previous</a>
-        <a href="" class="next btn">next</a>
-        
+        </div>
+        <div class="buttons">
+            <a href="projectdata.html" class="back btn">previous</a>
+            <a href="" class="next btn">next</a>
+        </div>
+        <div class="images">
+            <img src="images/Platformer/logo.jpg">
+        </div>
+
         <div class="window">
             <div class="textwindow">
                 <h1>Platformer</h1>
                 <h2>English</h2>
-                <p>for this school assignment i had to make a platformer game like mario. I chose to make everything from a square because I'm not very good at visualizing games. this game had to be played on an arcade cabinet</p>
-                <p>There are 2 joysticks on this arcade cabinet. the left joystick breaks you to walk around and the right one to aim.
+                <p>for this school assignment i had to make a platformer game like mario. I chose to make everything
+                    from a square because I'm not very good at visualizing games. this game had to be played on an
+                    arcade cabinet</p>
+                <p>There are 2 joysticks on this arcade cabinet. the left joystick breaks you to walk around and the
+                    right one to aim.
                     I also chose that you can only jump if you had your bullet with you.
                     if you shot you had to retrieve your bullet before you could jump further.
                     this made the game very funny and difficult.</p>
 
                 <br>
                 <h2>Nederlands</h2>
-                <p>voor deze schoolopdracht moest ik een platformer spel maken zoals mario. ik heb gekozen om alles van een vierkant te maken want ik ben niet zo goed in het visueele gebeuren van spellen. dit spel moest op een arcade kast gespeeld kunnen worden</p>
-                    <p>op deze arcade kast zitten 2 joysticks. de linkerjoystick gebreuk je om rond te lopen en de rechter om te mikken.
-                        ook heb ik ervoor gekozen dat je alleen kan springen als je je kogel bij had.
-                        als je schoot moest je je kogel eerst weer ophalen voordat je verder kon springen.
-                        dit zorgde ervoor dat het spel heel grappig en moeilijk werd.
-                    </p>
-            </div>
-            <div class="imagewindow">
-                <img src="images/Platformer/other.jpg" alt="">
+                <p>voor deze schoolopdracht moest ik een platformer spel maken zoals mario. ik heb gekozen om alles van
+                    een vierkant te maken want ik ben niet zo goed in het visueele gebeuren van spellen. dit spel moest
+                    op een arcade kast gespeeld kunnen worden</p>
+                <p>op deze arcade kast zitten 2 joysticks. de linkerjoystick gebreuk je om rond te lopen en de rechter
+                    om te mikken.
+                    ook heb ik ervoor gekozen dat je alleen kan springen als je je kogel bij had.
+                    als je schoot moest je je kogel eerst weer ophalen voordat je verder kon springen.
+                    dit zorgde ervoor dat het spel heel grappig en moeilijk werd.
+                </p>
             </div>
             <div class="imagewindow">
                 <iframe width="420" height="315" src="https://www.youtube.com/embed/qMXMkMNQLM4">
@@ -57,10 +64,6 @@
             </div>
         </div>
 
-    </section>
-    <section class="contentcontainer" id="content">
-
-        
     </section>
 </body>
 
