--- a/projectarcade.html
+++ b/projectarcade.html
@@ -19,24 +19,22 @@
 
 <body>
     <section class="topcontainer">
-        <a href="index.html#portfoliogalery" class="home">back</a>
-        <h1 class="title">Project Arcade</h1>
-        <img src="images/ProjectArcade/logo.png">
-        <h3 class="toptext"></h3>
-        <a href="" class="back btn">previous</a>
-        <a href="projectdata.html" class="next btn">next</a>
-        <div class="line"></div>
-        <div class="half-circle" onclick="openpage()">
-            <p id="scroll">Scrolldown</p>
+        <div class="toppp">
+            <a href="index.html#portfoliogalery" class="home">back</a>
+            <h1 class="title">ProjectArcade</h1>
+
         </div>
-
-
-    </section>
-    <section class="contentcontainer" id="content">
+        <div class="buttons">
+            <a href="projectdata.html" class="back btn">previous</a>
+            <a href="" class="next btn">next</a>
+        </div>
+        <div class="images">
+            <img src="images/ProjectArcade/logo.png">
+        </div>
 
         <div class="window">
             <div class="textwindow">
-                <h1>DiscoJam</h1>
+                <h1>Information</h1>
                 <h2>English</h2>
                 <p>For this school assignment we made a game that looks and feels good. And because we all five enjoy rhythm games we decided to choose this.
                     We named our game Disco Jam, why the name Disco jam? Disco Jam Is based on 80s disco, Jamming can be dancing but can also be meant as fighting.
@@ -56,9 +54,6 @@
                         Met de punten kun je een aanval op de tegenstander activeren. De speler verliest hp als de andere persoon wordt geraakt door een aanval
                         De spelers spelen dit totdat iemand sterft of als het nummer is afgelopen. Hoogste HP wint!
                         Als het aantal pk's gelijk is, wint de speler met de hoogste score.</p>
-            </div>
-            <div class="imagewindow">
-                <img src="images/ProjectArcade/Player2.gif" alt="">
             </div>
             <div class="imagewindow">
                 <iframe width="420" height="315" src="https://www.youtube.com/embed/-PwrcZD0H-U">
