--- a/projectdata.html
+++ b/projectdata.html
@@ -19,21 +19,18 @@
 
 <body>
     <section class="topcontainer">
-        <a href="index.html#portfoliogalery" class="home">back</a>
-        <h1 class="title">Project Data</h1>
-        <img src="images/ProjectData/logo.png">
-        <h3 class="toptext"></h3>
-        <a href="projectarcade.html" class="back btn">previous</a>
-        <a href="platformer.html" class="next btn">next</a>
-        <div class="line"></div>
-        <div class="half-circle" onclick="openpage()">
-            <p id="scroll">Scrolldown</p>
+        <div class="toppp">
+            <a href="index.html#portfoliogalery" class="home">back</a>
+            <h1 class="title">Project Data</h1>
+
         </div>
-
-
-    </section>
-    <section class="contentcontainer" id="content">
-
+        <div class="buttons">
+            <a href="projectdata.html" class="back btn">previous</a>
+            <a href="" class="next btn">next</a>
+        </div>
+        <div class="images">
+            <img src="images/ProjectData/logo.png">
+        </div>
         <div class="window">
             <div class="textwindow">
                 <h1>Project Data</h1>
