--- a/platformer.html
+++ b/platformer.html
@@ -30,7 +30,7 @@
             <a href="" class="next btn">next</a>
         </div>
         <div class="images">
-            <img src="images/Platformer/logo.jpg">
+            <img src="images/Platformer/logonew.png">
         </div>
 
         <div class="window">
