--- a/index.html
+++ b/index.html
@@ -2,149 +2,208 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://kit.fontawesome.com/d2785ef616.js" crossorigin="anonymous"></script>
-  <title>PortfolioSite</title>
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="styles/style.css">
-  <script src="https://kit.fontawesome.com/d2785ef616.js" crossorigin="anonymous"></script>
-  <link rel="shortcut icon" type="image/x-icon" href="images/profilepicture.jpg">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PortfolioSite</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="images/profilepicture.jpg">
+    <script src="https://kit.fontawesome.com/6b1c26bf8e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <script>
-    AOS.init();
-  </script>
-  <section class="TopContainer">
-    <nav class="navbar">
-      <div class="title">
-        <h1 data-aos="fade-down" data-aos-duration="2000">Luuk de Vos</h1>
-      </div>
-      <div class="hamburger-menu">
-        <div class="line line-1"></div>
-        <div class="line line-2"></div>
-        <div class="line line-3"></div>
-      </div>
-      <ul class="mainMenu" data-aos="fade-up" data-aos-duration="2000">
+    <script>
+        AOS.init();
+    </script>
+    <section class="TopContainer">
+        <nav class="navbar">
+            <div class="title">
+                <h1 data-aos="fade-down" data-aos-duration="2000">Luuk de Vos</h1>
+            </div>
+            <div class="hamburger-menu">
+                <div class="line line-1"></div>
+                <div class="line line-2"></div>
+                <div class="line line-3"></div>
+            </div>
+            <ul class="mainMenu" data-aos="fade-up" data-aos-duration="2000">
 
-        <li>
-          <a class="nav-links01" id="nav-link" href="#aboutme">Aboutme</a>
-        </li>
-        <li>
-          <a class="nav-links02" id="nav-link" href="#portfoliogalery">Portfolio Gallery</a>
-        </li>
-        <li>
-          <a class="nav-links03" id="nav-link" href="#">Contact me</a>
-        </li>
-      </ul>
-    </nav>
-    <div class="centercontainer">
-      <div class="imagecontainer" data-aos="zoom-in-down" data-aos-duration="1200">
-        <img src="images/profilepicture.jpg">
-      </div>
-      <div class="titletext" data-aos="zoom-in-up" data-aos-duration="1200">
-        <h1 class="titlee">I am <span class="text1">Luuk de Vos</span><span class="text2">a developer</span></h1>
-      </div>
-    </div>
-    <div class='icon-scroll'></div>
-  </section>
-  <section class="AboutmeContainer" id="aboutme">
-    <div class="aboutmetitle">
-      <h1>About me</h1>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-6 left">
-          <img class="" src="images/imageofme.jpeg" alt="self-portret">
+                <li>
+                    <a class="nav-links01" id="nav-link" href="#aboutme">Aboutme</a>
+                </li>
+                <li>
+                    <a class="nav-links02" id="nav-link" href="#portfoliogalery">Portfolio Gallery</a>
+                </li>
+                <li>
+                    <a class="nav-links03" id="nav-link" href="#contact-me">Contact me</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="centercontainer">
+            <div class="imagecontainer" data-aos="zoom-in-down" data-aos-duration="1200">
+                <img src="images/profilepicture.jpg">
+            </div>
+            <div class="titletext" data-aos="zoom-in-up" data-aos-duration="1200">
+                <h1 class="titlee">I am <span class="text1">Luuk de Vos</span><span class="text2">a developer</span>
+                </h1>
+            </div>
         </div>
-        <div class="col-sm-6 right">
-          <h1>English</h1>
-          <p>My name Is Luuk de Vos and I’m 17 years old. I’m following an education on SintLucas called Software
-            Development.</p>
-          <p>My skills are C#, HTML, Art, Css, python & php</p>
-          <p>In my free time i like to code and to mountainbike a little bit.</p>
-          <p> My ambition is to make a multiplayer steam game like : </p>
-          <br>
-          <h1>Nederlands</h1>
-          <p>Mijn Naam is Luuk de Vos en ik ben 17 jaar oud. Ik zit op het sintlucas en volg de opleiding
-            SoftwareDevelopment</p>
-          <p>Mijn skills zijn Unity, C#, HTML, Art, Css, python & php</p>
-          <p>In mijn vrije tijd vind ik het leuk om te programmeren en om een beetje te mountainbiken</p>
-          <p>Mijn ambitie is om een multiplayer steam game te maken
-          </p>
-
-          <div class="skills" id="skillview">
-            <li>
-              <h3>HTML</h3><span class="bar"><span class="html" id="html"></span></span>
-              <h3>C#</h3><span class="bar"><span class="csharp" id="csharp"></span></span>
-              <h3>CSS</h3><span class="bar"><span class="css" id="css"></span></span>
-              <h3>ART</h3><span class="bar"><span class="art" id="art"></span></span>
-              <h3>UNITY</h3><span class="bar"><span class="unity" id="unity"></span></span>
-              <h3>Dutch</h3><span class="bar"><span class="dutch" id="dutch"></span></span>
-              <h3>English</h3><span class="bar"><span class="english" id="english"></span></span>
-            </li>
-          </div>
+        <div class='icon-scroll'></div>
+    </section>
+    <section class="AboutmeContainer" id="aboutme" data-aos="fade-up" data-aos-duration="2000">
+        <div class="aboutmetitle">
+            <h1>About me</h1>
         </div>
-      </div>
-    </div>
-  </section>
-  <section class="porfolioGalery" id="portfoliogalery">
-    <h1 class="portfoliotitle">Portfolio Gallery</h1>
-    <div class="portfoliocontent" ata-aos="fade-up">
-      <div class="cards">
         <div class="container">
-          <div class="row">
-            <div class="col">
-              <div class="card">
-                <h5 class="card-title">PlatformerGame</h5>
-                <img src="images/Platformer/logo.jpg" class="card-img-top" alt="...">
-                <div class="card-footer">
-                  <a href="platformer.html" class="btn btn-primary">More information</a>
+            <div class="row">
+                <div class="col-sm-6 left">
+                    <img class="" src="images/imageofme.jpeg" alt="self-portret">
                 </div>
-              </div>
-            </div>
+                <div class="col-sm-6 right">
+                    <h1>English</h1>
+                    <p>My name Is Luuk de Vos and I’m 17 years old. I’m following an education on SintLucas called
+                        Software Development.
+                    </p>
+                    <p>My skills are C#, HTML, Art, Css, python & php</p>
+                    <p>In my free time i like to code and to mountainbike a little bit.</p>
+                    <p> My ambition is to make a multiplayer steam game like : </p>
+                    <br>
+                    <h1>Nederlands</h1>
+                    <p>Mijn Naam is Luuk de Vos en ik ben 17 jaar oud. Ik zit op het sintlucas en volg de opleiding
+                        SoftwareDevelopment
+                    </p>
+                    <p>Mijn skills zijn Unity, C#, HTML, Art, Css, python & php</p>
+                    <p>In mijn vrije tijd vind ik het leuk om te programmeren en om een beetje te mountainbiken</p>
+                    <p>Mijn ambitie is om een multiplayer steam game te maken
+                    </p>
 
-            <div class="col">
-              <div class="card" ata-aos="fade-up">
-                <h5 class="card-title">ProjectArcade</h5>
-                <img src="images/ProjectArcade/logo.png" class="card-img-top" alt="...">
-                <div class="card-footer">
-                  <a href="projectarcade.html" class="btn btn-primary">More information</a>
+                    <div class="skills" id="skillview">
+                        <li>
+                            <h3>HTML</h3><span class="bar"><span class="html" id="html"></span></span>
+                            <h3>C#</h3><span class="bar"><span class="csharp" id="csharp"></span></span>
+                            <h3>CSS</h3><span class="bar"><span class="css" id="css"></span></span>
+                            <h3>ART</h3><span class="bar"><span class="art" id="art"></span></span>
+                            <h3>UNITY</h3><span class="bar"><span class="unity" id="unity"></span></span>
+                            <h3>Dutch</h3><span class="bar"><span class="dutch" id="dutch"></span></span>
+                            <h3>English</h3><span class="bar"><span class="english" id="english"></span></span>
+                        </li>
+                    </div>
                 </div>
-              </div>
             </div>
-
-            <div class="col">
-              <div class="card item" ata-aos="fade-up">
-                <h5 class="card-title">ProjectData</h5>
-                <img src="images/ProjectData/logo.png" class="card-img-top" alt="...">
-                <div class="card-footer">
-                  <a href="projectdata.html" class="btn btn-primary">More information</a>
-                </div>
-              </div>
-            </div>
-            
-
-
-            </div>
-          </div>
         </div>
+    </section>
+    <section class="porfolioGalery" id="portfoliogalery" data-aos="fade-up" data-aos-duration="2000">
+        <h1 class="portfoliotitle">Portfolio Gallery</h1>
+        <div class="portfoliocontent" ata-aos="fade-up">
+            <div class="cards">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <div class="card" data-aos="zoom-in" data-aos-duration="1000">
+                                <h5 class="card-title">PlatformerGame</h5>
+                                <img src="images/Platformer/logonew.png" class="card-img-top" alt="...">
+                                <div class="card-footer">
+                                    <a href="platformer.html" class="btn btn-primary">More information</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card" data-aos="zoom-in" data-aos-duration="1000">
+                                <h5 class="card-title">ProjectArcade</h5>
+                                <img src="images/ProjectArcade/logonew.png" class="card-img-top" alt="...">
+                                <div class="card-footer">
+                                    <a href="projectarcade.html" class="btn btn-primary">More information</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card" data-aos="zoom-in" data-aos-duration="1000">
+                                <h5 class="card-title">ProjectData</h5>
+                                <img src="images/ProjectData/logonew.png" class="card-img-top" alt="...">
+                                <div class="card-footer">
+                                    <a href="projectdata.html" class="btn btn-primary">More information</a>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+                    </div>
+                </div>
+            </div>
 
 
 
 
 
-      </div>
-    </div>
-    </div>
-  </section>
+        </div>
+        </div>
+        </div>
+    </section>
+    <section class="contactme" id="contact-me">
+        <div class="contacttitle">
+            <h1>Contact me</h1>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 contact">
+                    <div class="footer-social-icons">
+                        <h4 class="contacttitle">Follow me on</h4>
+                        <ul class="social-icons">
+                            <li>
+                                <a href="https://www.instagram.com/luukvosje321/" class="social-icon"> <i
+                                        class="fa fa-instagram"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://stackoverflow.com/users/15197961/luukvosje" class="social-icon"> <i
+                                        class="fa fa-stack-overflow"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/luukvosje" class="social-icon"> <i
+                                        class="fa fa-github"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://pinterest.fr/luukvosje/_saved/" class="social-icon"> <i
+                                        class="fa fa-pinterest"></i></a>
+                            </li>
+                            <li>
+                                <a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://www.tiktok.com/@yung_kroisand" class="social-icon"> <i
+                                        class="fab fa-tiktok"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://www.youtube.com/channel/UCVEQ0CD072rGmfrqzSLnbog" class="social-icon"> <i
+                                        class="fab fa-youtube"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4 contact">
+                    <h4 class="contacttitle">My information</h4>
+                    <ul class="informationtap">
+                        <li>
+                            <h4>Email : devosluuk@hotmail.nl</h4>
+                        </li>
+                        <li>
+                            <h4>PhoneNumber : +31 6 30393926</h4>
+                        </li>
+                        <li>
+                            <h4>Address : Eimbert 13, 5492NH </h4>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
@@ -152,21 +211,21 @@
 
 
 
-  <div class="item" data-aos="fade-up">1</div>
-  <div class="item" data-aos="fade-down">2</div>
-  <div class="item" data-aos="fade-right">3</div>
-  <div class="item" data-aos="fade-left">4</div>
+    <div class="item" data-aos="fade-up">1</div>
+    <div class="item" data-aos="fade-down">2</div>
+    <div class="item" data-aos="fade-right">3</div>
+    <div class="item" data-aos="fade-left">4</div>
 
-  <div class="item" data-aos="zoom-in">5</div>
-  <div class="item" data-aos="zoom-out">6</div>
+    <div class="item" data-aos="zoom-in">5</div>
+    <div class="item" data-aos="zoom-out">6</div>
 
-  <div class="item" data-aos="slide-up">7</div>
+    <div class="item" data-aos="slide-up">7</div>
 
-  <div class="item" id="home" data-aos="flip-up">8</div>
-  <div class="item" data-aos="flip-down">9</div>
-  <div class="item" data-aos="flip-right">10</div>
-  <div class="item" data-aos="flip-left">11</div>
-  <script src="js/javaIndex.js"></script>
+    <div class="item" id="home" data-aos="flip-up">8</div>
+    <div class="item" data-aos="flip-down">9</div>
+    <div class="item" data-aos="flip-right">10</div>
+    <div class="item" data-aos="flip-left">11</div>
+    <script src="js/javaIndex.js"></script>
 </body>
 
 </html>
