--- a/projectdata.html
+++ b/projectdata.html
@@ -29,7 +29,7 @@
             <a href="" class="next btn">next</a>
         </div>
         <div class="images">
-            <img src="images/ProjectData/logo.png">
+            <img src="images/ProjectData/logonew.png">
         </div>
         <div class="window">
             <div class="textwindow">
