--- a/index.html
+++ b/index.html
@@ -133,7 +133,16 @@
                             </div>
                         </div>
 
-
+                        <div class="col">
+                            <div class="card" data-aos="zoom-in" data-aos-duration="1000">
+                                <h5 class="card-title">Webshop</h5>
+                                <img src="images/webshop/car01.jpg" class="card-img-top" alt="...">
+                                <div class="card-footer">
+                                    <a href="webshop.html" class="btn btn-primary">More information</a>
+                                </div>
+                            </div>
+                        </div>
+                        
 
                     </div>
                 </div>
@@ -204,28 +213,6 @@
             </div>
         </div>
     </section>
-
-
-
-
-
-
-
-    <div class="item" data-aos="fade-up">1</div>
-    <div class="item" data-aos="fade-down">2</div>
-    <div class="item" data-aos="fade-right">3</div>
-    <div class="item" data-aos="fade-left">4</div>
-
-    <div class="item" data-aos="zoom-in">5</div>
-    <div class="item" data-aos="zoom-out">6</div>
-
-    <div class="item" data-aos="slide-up">7</div>
-
-    <div class="item" id="home" data-aos="flip-up">8</div>
-    <div class="item" data-aos="flip-down">9</div>
-    <div class="item" data-aos="flip-right">10</div>
-    <div class="item" data-aos="flip-left">11</div>
     <script src="js/javaIndex.js"></script>
 </body>
-
 </html>
