--- a/projectarcade.html
+++ b/projectarcade.html
@@ -25,8 +25,8 @@
 
         </div>
         <div class="buttons">
-            <a href="projectdata.html" class="back btn">previous</a>
-            <a href="" class="next btn">next</a>
+            <a href="platformer.html" class="back btn">previous</a>
+            <a href="projectdata.html" class="next btn">next</a>
         </div>
         <div class="images">
             <img src="images/ProjectArcade/logonew.png">
