--- a/projectdata.html
+++ b/projectdata.html
@@ -25,8 +25,8 @@
 
         </div>
         <div class="buttons">
-            <a href="projectdata.html" class="back btn">previous</a>
-            <a href="" class="next btn">next</a>
+            <a href="projectarcade.html" class="back btn">previous</a>
+            <a href="webshop.html" class="next btn">next</a>
         </div>
         <div class="images">
             <img src="images/ProjectData/logonew.png">
