--- a/webshop.html
+++ b/webshop.html
@@ -16,12 +16,12 @@
     <section class="topcontainer">
         <div class="toppp">
             <a href="index.html#portfoliogalery" class="home">back</a>
-            <h1 class="titlle">Project Data</h1>
+            <h1 class="titlle">Webshop</h1>
 
         </div>
         <div class="buttons">
             <a href="projectdata.html" class="back btn">previous</a>
-            <a href="" class="next btn">next</a>
+            <a href="platformer.html" class="next btn">next</a>
         </div>
         <div class="window">
             <div class="textwindow">
