--- a/platformer.html
+++ b/platformer.html
@@ -26,8 +26,8 @@
 
         </div>
         <div class="buttons">
-            <a href="projectdata.html" class="back btn">previous</a>
-            <a href="" class="next btn">next</a>
+            <a href="webshop.html" class="back btn">previous</a>
+            <a href="projectarcade.html" class="next btn">next</a>
         </div>
         <div class="images">
             <img src="images/Platformer/logonew.png">
