--- a/index.html
+++ b/index.html
@@ -142,7 +142,15 @@
                                 </div>
                             </div>
                         </div>
-                        
+                        <div class="col">
+                            <div class="card" data-aos="zoom-in" data-aos-duration="1000">
+                                <h5 class="card-title">Javascript Game</h5>
+                                <img src="images/game/achtergrond.png" class="card-img-top" alt="...">
+                                <div class="card-footer">
+                                    <a target="_blank" href="game.html" class="btn btn-primary">More information</a>
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
